Fixed issues - shortening of labels - During recording submit and Cancel and exit buttons are not visible - While recording an clickable action it records unnecessary clickable actions

--- a/chrome-plugin/css/extension.css
+++ b/chrome-plugin/css/extension.css
@@ -276,7 +276,7 @@
 	cursor: pointer;
 }
 #nistvoicesearchresults{
-	height: 75vh;
+	min-height: 70vh;
 	overflow-y: scroll;
 	margin-top: 10px;
 }
